# PiccoloReflection

./: CMakeLists.txt  README.md
PiccoloReflection/: CMakeLists.txt
PiccoloReflection/MetaParser/: CMakeLists.txt
PiccoloReflection/MetaParser/parser/: main.cpp
PiccoloReflection/Precompile/: precompile.cmake
PiccoloReflection/ReflectionCore/: CMakeLists.txt
PiccoloReflection/ReflectionCore/meta/: meta_example.cpp  meta_example.h
PiccoloReflection/ReflectionCore/meta/reflection/: reflection.h  reflection_register.cpp
PiccoloReflection/ReflectionCore/meta/serializer/: serializer.h
PiccoloReflection/Template/: allReflectionFile.mustache
